--- a/style.css
+++ b/style.css
@@ -1,62 +1,27 @@
-body
-{
+* {
+	margin: 0;
+}
+
+body {
 	background-color: #2b7c74;
 	color: #ffffff;
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 }
-@font-face
-{
+
+@font-face {
 	font-family: cs_regular;
 
-	src:url(font/cs_regular.ttf);
+	src: url(font/cs_regular.ttf);
 }
-@font-face
-{
+
+@font-face {
 	font-family: satisfontory;
 
-	src:url(font/satisfontory.ttf);
-}
-#container
-{
-	width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
+	src: url(font/satisfontory.ttf);
 }
 
-.rectangle
-{
-	width: 960px;
-	margin: 20px;
-	text-align: center;
-}
-
-.square
-{
-	width: 50%;
-	float: left;
-}
-#logo
-{
-	float: left;
-	font-family: 'Josefin Sans', sans-serif;
-	font-size: 70px;
-	width: 600px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	text-align: left;
-}
-#zegar
-{
-	float: left;
-	font-family: 'Josefin Sans', sans-serif;
-	font-size: 70px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	text-align: left;
-}
-#csgo
-{
+#csgo {
 	font-family: cs_regular;
 	font-size: 75px;
 	width: 1000px;
@@ -64,8 +29,8 @@ body
 	margin-bottom: 5px;
 	text-align: center;
 }
-#satis
-{
+
+#satis {
 	font-family: satisfontory;
 	font-size: 60px;
 	width: 1000px;
@@ -73,128 +38,183 @@ body
 	margin-bottom: 5px;
 	text-align: center;
 }
-.tile1
-{
-	margin: 10px;
-	width: 230px;
-	height: 142px;
-	background-color: #3095d3;
-	float: left;
+
+header {
+	display: flex;
+	justify-content: space-between;
+	padding: 2rem 2rem 0rem;
 	text-align: center;
+	font-size: 6rem;
+	font-family: 'Josefin Sans', sans-serif;
 }
-.tile1:hover
-{
+
+main {
+	margin: 2rem 2rem;
+	display: grid;
+	gap: 2rem;
+	grid-template-columns: repeat(2, 2fr) repeat(4, 1fr);
+	grid-auto-rows: 240px;
+}
+
+.tile {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	border-radius: 16px;
+	box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+	overflow: hidden;
+}
+
+.t1 {
+	background-color: #3095d3;
+}
+
+.t1:hover {
 	background-color: #2084c2;
 }
-.tile2
-{
-	margin: 10px;
-	width: 230px;
-	height: 142px;
+
+.at {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.gt {
 	background-color: #24292e;
-	float: left;
 	text-align: center;
 }
-.tile2:hover
-{
+
+.gt:hover {
 	background-color: #13181d;
 }
-.tile3
-{
-	margin: 10px;
-	width: 230px;
-	height: 142px;
+
+.sel {
 	background-color: #ffffff;
-	float: left;
+
 	text-align: center;
 	color: black;
 }
-.tile3:hover
-{
+
+.sel:hover {
 	background-color: #eeeeee;
 }
-.tile4
-{
-	margin: 10px;
-	width: 460px;
-	height: 122px;
-	background-color: #666666;
-	text-align: center;
-	padding: 10px;
+
+.dc {
+	background-color: #072f5b;
+	background-image: url('img/discordbanner.png');
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
 }
-.tile5
-{
-	margin: 10px;
-	width: 460px;
-	height: 284px;
-	background-color: #d94348;
-	text-align: center;
-	padding: 10px;
-}
-.tile6
-{
-	margin: 10px;
-	margin-left: 385px;
-	margin-right: 385px;
-	width: 230px;
-	height: 142px;
-	background-color: #3095d3;
-	text-align: center;
-}
-.tile6:hover
-{
-	background-color: #2083c2;
-}
-.yt
-{
-	margin: 10px;
-	width: 105px;
-	height: 142px;
-	background-color: #d94348;
-	float: left;
-}
-.yt:hover
-{
-	background-color: #c83237;
-}
-.th
-{
-	margin: 10px;
-	width: 105px;
-	height: 142px;
-	background-color: #6441A4;
-	float: left;
-}
-.th:hover
-{
-	background-color: #5330a4;
-}
-.tw
-{
-	margin: 10px;
-	width: 105px;
-	height: 142px;
-	background-color: #1DA1F2;
-	float: left;
-}
-.tw:hover
-{
-	background-color: #0ca0e1;
-}
-.st
-{
-	margin: 10px;
-	width: 105px;
-	height: 142px;
-	background-color: #171a21;
-	float: left;
-}
-.st:hover
-{
-	background-color: #060a10;
-}
-a.tilelink
-{
+
+.adc {
 	color: #ffffff;
 	text-decoration: none;
+	grid-column: span 2;
+}
+
+.vd {
+	grid-row: span 2;
+	grid-column: span 4;
+	background-color: #d94348;
+}
+
+.yt {
+	background-color: #d94348;
+}
+
+.yt:hover {
+	background-color: #c83237;
+}
+
+.th {
+	background-color: #6441A4;
+
+}
+
+.th:hover {
+	background-color: #5330a4;
+}
+
+.tw {
+	background-color: #1DA1F2;
+
+}
+
+.tw:hover {
+	background-color: #0ca0e1;
+}
+
+.st {
+	background-color: #171a21;
+
+}
+
+.st:hover {
+	background-color: #060a10;
+}
+
+.as {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+#mail {
+	text-decoration: none;
+	color: #f3f3f3;
+}
+
+#mail:hover {
+	text-decoration: underline;
+}
+
+footer {
+	font-size: 1.5em;
+	text-align: center;
+	padding: 2rem;
+}
+
+@media screen and (max-width: 1000px) {
+	header {
+		flex-direction: column;
+	}
+
+	main {
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	.at {
+		grid-column: span 2;
+	}
+
+	.vd {
+		grid-row: 3 / 5;
+	}
+
+	.adc {
+		grid-column: span 4;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.at {
+		grid-column: span 4;
+	}
+	.as {
+		grid-column: span 2;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	header {
+		font-size: 4rem;
+	}
+	.as {
+		grid-column: span 4;
+	}
+	footer {
+		font-size: 1.2em;
+	}
 }
