--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ main {
 footer {
 	font-size: 1.5em;
 	text-align: center;
-	padding: 2rem;
+	padding: 0rem 2rem 2rem;
 }
 
 @media screen and (max-width: 1000px) {
@@ -239,11 +239,15 @@ footer {
 		font-size: 4rem;
 	}
 
+	.dc {
+		background-image: url('img/ipplogodc.png');
+	}
+
 	.as {
 		grid-column: span 4;
 	}
 
 	footer {
-		font-size: 1.2em;
+		font-size: 1.1em;
 	}
 }
