--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
 * {
 	margin: 0;
 }
@@ -7,6 +10,7 @@ body {
 	color: #ffffff;
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
+	font-display: swap;
 }
 
 @font-face {
